--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,5 +80,5 @@ markdown_extensions:
 
 plugins:
   - search
-  - social:
-     cards_layout: default/variant
+  # - social:
+  #    cards_layout: default/variant
