--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,6 +39,9 @@ theme:
     - navigation.indexes
     - content.code.copy
     - content.code.annotate
+  icon:
+    annotation: material/star-four-points-circle
+
 
 nav:
   - 🏠 Home: index.md
@@ -49,7 +52,7 @@ nav:
       - Proxmox:
           - Helpful Commands: documentation/Proxmox/Helpful Commands.md
       - Git Commands: documentation/Git Hub/Git Commands.md
-  - Apps That I Use: random pages/Apps-That-I-Use.md
+  - 💻 Apps That I Use: random pages/Apps-That-I-Use.md
 
 extra:
   generator: true # Disable the Made with Material for MkDocs footer
@@ -70,6 +73,11 @@ extra_javascript:
 
 markdown_extensions:
   - attr_list
+  - md_in_html
+  - tables
+  - toc:
+      toc_depth: 3
+  - pymdownx.blocks.caption
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
       emoji_generator: !!python/name:material.extensions.emoji.to_svg
@@ -86,6 +94,15 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
   - admonition
   - pymdownx.details
+  - def_list
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - pymdownx.critic
+  - pymdownx.caret
+  - pymdownx.keys
+  - pymdownx.mark
+  - pymdownx.tilde
+  - footnotes
 
 plugins:
   - search
